# Auralis

./: .gitignore  LICENSE  README.md  app  code  config  pyproject.toml  requirements.txt (for Python)  test_imports  train_engine  train_text
