[project]
name = "auralis-moodify"
version = "1.0.0"
description = "Multimodal AI mood detection that plays Spotify music"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "opencv-python",
    "deepface",
    "speechrecognition",
    "pyaudio",
    "spotipy",
    "transformers",
    "torch",
    "customtkinter",
    "pandas",
    "numpy",
    "datasets",
    "evaluate",
    "python-dotenv",
]
